In FSubsetDifferentApproach.ipynb defines a different approach using SelectKBest with chi2

--- a/FStestRedefined.ipynb
+++ b/FStestRedefined.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "4  5  116  74   0    0  25.6  0.201  30  0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -156,18 +156,18 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x242e7549da0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0xeabc550>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWQAAAD8CAYAAABAWd66AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAACndJREFUeJzt22uMbXV5x/HfI0dUREVAvNSmigWsMXgkKdFo7IWKaBRr\nWhWjKcHbG1/oi0ZpaUw06Qs10Re1adNosa1WDSp4awPExrYxYqt4zgEV5KoeQamXxrRNK+K/L9Ya\n2R73wHCYWfOQfD7Jzp5Zs/esZ6/Z+ztrrT1TY4wAsPvut9sDADARZIAmBBmgCUEGaEKQAZoQZIAm\nBBmgCUEGaEKQAZrYc09u/Oz7vdi/9QHcQ5f/9KLayu3sIQM0IcgATQgyQBOCDNCEIAM0IcgATQgy\nQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgA\nTQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0\nIcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCE\nIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOC\nDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgy\nQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgA\nTQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0\nIcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCE\nIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOC\nDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgy\nQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgA\nTQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0\nIcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCE\nIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0UWOM5Vda9dox\nxl8tvuK70XEuM22Nmbau41xmmuzWHvJrd2m9d6fjXGbaGjNtXce5zBSnLADaEGSAJnYryK3OFa3o\nOJeZtsZMW9dxLjNll97UA+AXOWUB0MTiQa6qY6rqI1V1TVV9raqevtB6/7qqbquqq9d87Q+ralTV\n8fPnD6uqT1bV/qr6SlWdt8B8p1TVvpXLj6rqDVX1jnlbHaiqi6vqmJ2eZWWmB1bVv61sh7fMy99X\nVTetzLp3qZk2mfOsqrq2qq6vqvMXWN9m2+W987ID83P86E3uf2pVfX6+71VV9cB7McvdPvaqeklV\nfXVe39/Py/auzHCgql66cvt/XfnZ3lJVlxzufJvMc/P8uPdV1RfnZcdW1eVVdd18/fDtXOc9nG/T\nVuy4McailyR/k+TV88dHJjlmofU+K8lpSa4+ZPkvJ7k0yTeSHD8v++Mkb5s/fkSSHyQ5csFtdESS\n7yT5lSRnJtkzL3/bxlwLzVFJjp4/vn+SLyR5WpL3Jfn9pZ87d7Gtbkhy4vx82p/kSbu0XR66cpt3\nJjl/zX33JDmQ5Cnz58clOWKnHnuSk5J8OcnD589PmK9PTnLS/PFjkty67rWY5KNJ/mCbt9/NG6+1\nlWVv39heSc5f8nm+Zr61rVjisugeclU9dH6w702SMcaPxxj/ucS6xxj/kimsh3pXkjcmWT2ZPpI8\npKoqydHz/X6y40Pe6YwkN4wxvjHGuGyMsbHuK5I8dqkhxuS/5k/vP1+6velwepLrxxg3jjF+nORD\nSV64kyvcbLuMMX6UJPPz5kFZv63OTHJgjLF//l7fH2PccZijbOWxvybJn48xfjiv77b5+utjjOvm\nj29JclumnY+fqaqHJPntJNu6h7yJF2baWct8/bsLrHOtu2jFjlv6lMWJSf4jyYVV9eWqek9VPXjh\nGX6mqs5O8u2NF8eKdyf5tSS3JLkqyevHGD9dcLRzknxwzfJXJvnHBedIVR1RVfsyvWAvH2N8Yf7S\nn86Huu+qqgcsOdMhfinJt1Y+Pzgv21GbbZequjDT0c0Tk/zZmruenGRU1aVVdWVVvfFejLGVx35y\nkpOr6nNVdUVVnbXmsZyeaQ/7hkO+9KIkn9n4RbONRpLLqupLVbXxzxePHGPcmiTz9QnbvM77hKWD\nvCfTocBfjDGemuS/Mx2eLK6qjkpyQZI3r/nyc5Lsy3QotzfJu+e9+yXmOjLJ2UkuOmT5BZn20j+w\nxBwbxhh3jDH2ZtozP72qnpzkjzIF59eTHJvkTUvOdIhas2zH9+I32S4ZY5yX6XnztSQvXXPXPUme\nmeTl8/WLquqMwxxjK499T6bTFr+Z5GVJ3rP6PkRVPTrJ3yU5b81Ox8uyfsfg3nrGGOO0JM9N8rqq\netYOrOM+aekgH0xycGUv6yOZAr0bnpDk8Un2V9XNmV5YV1bVo5Kcl+Rj86Hp9UluyhSgJTw3yZVj\njO9uLKiqc5M8P8nLx3ySa2nzqaXPJjlrjHHrvG3+L8mFmQ6dd8vBTO8DbHhspiObRaxul5VldyT5\ncJLfW3OXg0n+eYzxvTHG/yT5hxz+a2Arj/1gko+PMW4fY9yU5NpMgd44hfjpJH8yxrhi9U5VdVym\nn+unD3O2Tc2nSDZOn1w8r+e78y+HjV8St233eu8LFg3yGOM7Sb5VVafMi85I8tUlZ1iZ5aoxxglj\njMeNMR6X6Yl72jzjN+fZUlWPTHJKkhsXGu3n9krmQ8w3JTl7fgEvpqoesbE3VVUPSvI7Sa5ZeeFU\npnN9y78bfad/T3JSVT1+Pro4J8kndnKFm2yXa6vqV+dlleQFSa5Zc/dLk5xaVUdV1Z4kv5HDfw1s\n5bFfkuS35rmOz3QK48b59hcn+dsxxkX5RS9O8qkxxv8e5mxrVdWD53PTmU9Xnpnp+fOJJOfONzs3\nyce3c733GUu/i5jpFMAXM73TfEnmd38XWO8HM72TfHum+L7qkK/fnDv/yuIxSS7LdP746iSvWGjG\no5J8P8nDVpZdn+k84b758pcL/qxOzfQO/YF5O7x5Xv5PK9vm/Zn/4mC3Lkmel+Trmc6BXrAb2yXT\nzs3nVrbLBzL/1UWmU1BvXbn/K5J8Zb7d27f7sSd5a6Zf4Ml0WuOdmaJ/VZJzVma4feV5tS/J3pXv\n+9lMR0Pbve1OzPTXIPvnbbAx83FJPpPkuvn62F18Pt1lK3by4j/1AJrwn3oATQgyQBOCDNCEIAM0\nIcgATQgyQBOCDNCEIAM08f9g8ablNuhSigAAAABJRU5ErkJggg==\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWQAAAD8CAYAAABAWd66AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAACndJREFUeJzt22uMbXV5x/HfI0dUREVAvNSmigWs\nMXgkKdFo7IWKaBRrWhWjKcHbG1/oi0ZpaUw06Qs10Re1adNosa1WDSp4awPExrYxYqt4zgEV5Koe\nQamXxrRNK+K/L9Ya2R73wHCYWfOQfD7Jzp5Zs/esZ6/Z+ztrrT1TY4wAsPvut9sDADARZIAmBBmg\nCUEGaEKQAZoQZIAmBBmgCUEGaEKQAZrYc09u/Oz7vdi/9QHcQ5f/9KLayu3sIQM0IcgATQgyQBOC\nDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgy\nQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgA\nTQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0\nIcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCE\nIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOC\nDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgy\nQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgA\nTQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0\nIcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCE\nIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOC\nDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgy\nQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgA\nTQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0\nIcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM0IcgATQgyQBOCDNCE\nIAM0UWOM5Vda9doxxl8tvuK70XEuM22Nmbau41xmmuzWHvJrd2m9d6fjXGbaGjNtXce5zBSnLADa\nEGSAJnYryK3OFa3oOJeZtsZMW9dxLjNll97UA+AXOWUB0MTiQa6qY6rqI1V1TVV9raqevtB6/7qq\nbquqq9d87Q+ralTV8fPnD6uqT1bV/qr6SlWdt8B8p1TVvpXLj6rqDVX1jnlbHaiqi6vqmJ2eZWWm\nB1bVv61sh7fMy99XVTetzLp3qZk2mfOsqrq2qq6vqvMXWN9m2+W987ID83P86E3uf2pVfX6+71VV\n9cB7McvdPvaqeklVfXVe39/Py/auzHCgql66cvt/XfnZ3lJVlxzufJvMc/P8uPdV1RfnZcdW1eVV\ndd18/fDtXOc9nG/TVuy4McailyR/k+TV88dHJjlmofU+K8lpSa4+ZPkvJ7k0yTeSHD8v++Mkb5s/\nfkSSHyQ5csFtdESS7yT5lSRnJtkzL3/bxlwLzVFJjp4/vn+SLyR5WpL3Jfn9pZ87d7Gtbkhy4vx8\n2p/kSbu0XR66cpt3Jjl/zX33JDmQ5Cnz58clOWKnHnuSk5J8OcnD589PmK9PTnLS/PFjkty67rWY\n5KNJ/mCbt9/NG6+1lWVv39heSc5f8nm+Zr61rVjisugeclU9dH6w702SMcaPxxj/ucS6xxj/kims\nh3pXkjcmWT2ZPpI8pKoqydHz/X6y40Pe6YwkN4wxvjHGuGyMsbHuK5I8dqkhxuS/5k/vP1+6velw\nepLrxxg3jjF+nORDSV64kyvcbLuMMX6UJPPz5kFZv63OTHJgjLF//l7fH2PccZijbOWxvybJn48x\nfjiv77b5+utjjOvmj29JclumnY+fqaqHJPntJNu6h7yJF2baWct8/bsLrHOtu2jFjlv6lMWJSf4j\nyYVV9eWqek9VPXjhGX6mqs5O8u2NF8eKdyf5tSS3JLkqyevHGD9dcLRzknxwzfJXJvnHBedIVR1R\nVfsyvWAvH2N8Yf7Sn86Huu+qqgcsOdMhfinJt1Y+Pzgv21GbbZequjDT0c0Tk/zZmruenGRU1aVV\ndWVVvfFejLGVx35ykpOr6nNVdUVVnbXmsZyeaQ/7hkO+9KIkn9n4RbONRpLLqupLVbXxzxePHGPc\nmiTz9QnbvM77hKWDvCfTocBfjDGemuS/Mx2eLK6qjkpyQZI3r/nyc5Lsy3QotzfJu+e9+yXmOjLJ\n2UkuOmT5BZn20j+wxBwbxhh3jDH2ZtozP72qnpzkjzIF59eTHJvkTUvOdIhas2zH9+I32S4ZY5yX\n6XnztSQvXXPXPUmemeTl8/WLquqMwxxjK499T6bTFr+Z5GVJ3rP6PkRVPTrJ3yU5b81Ox8uyfsfg\n3nrGGOO0JM9N8rqqetYOrOM+aekgH0xycGUv6yOZAr0bnpDk8Un2V9XNmV5YV1bVo5Kcl+Rj86Hp\n9UluyhSgJTw3yZVjjO9uLKiqc5M8P8nLx3ySa2nzqaXPJjlrjHHrvG3+L8mFmQ6dd8vBTO8DbHhs\npiObRaxul5VldyT5cJLfW3OXg0n+eYzxvTHG/yT5hxz+a2Arj/1gko+PMW4fY9yU5NpMgd44hfjp\nJH8yxrhi9U5VdVymn+unD3O2Tc2nSDZOn1w8r+e78y+HjV8St233eu8LFg3yGOM7Sb5VVafMi85I\n8tUlZ1iZ5aoxxgljjMeNMR6X6Yl72jzjN+fZUlWPTHJKkhsXGu3n9krmQ8w3JTl7fgEvpqoesbE3\nVVUPSvI7Sa5ZeeFUpnN9y78bfad/T3JSVT1+Pro4J8kndnKFm2yXa6vqV+dlleQFSa5Zc/dLk5xa\nVUdV1Z4kv5HDfw1s5bFfkuS35rmOz3QK48b59hcn+dsxxkX5RS9O8qkxxv8e5mxrVdWD53PTmU9X\nnpnp+fOJJOfONzs3yce3c733GUu/i5jpFMAXM73TfEnmd38XWO8HM72TfHum+L7qkK/fnDv/yuIx\nSS7LdP746iSvWGjGo5J8P8nDVpZdn+k84b758pcL/qxOzfQO/YF5O7x5Xv5PK9vm/Zn/4mC3Lkme\nl+Trmc6BXrAb2yXTzs3nVrbLBzL/1UWmU1BvXbn/K5J8Zb7d27f7sSd5a6Zf4Ml0WuOdmaJ/VZJz\nVma4feV5tS/J3pXv+9lMR0Pbve1OzPTXIPvnbbAx83FJPpPkuvn62F18Pt1lK3by4j/1AJrwn3oA\nTQgyQBOCDNCEIAM0IcgATQgyQBOCDNCEIAM08f9g8ablNuhSigAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x242e752a518>"
+       "<matplotlib.figure.Figure at 0xeabc860>"
       ]
      },
      "metadata": {},
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
        "max      2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,16 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['6', '148', '72', '35', '0', '33.6', '0.627', '50'], dtype='object')"
+       "Index([u'6', u'148', u'72', u'35', u'0', u'33.6', u'0.627', u'50'], dtype='object')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "4  5  116  74   0    0  25.6  0.201  30"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "Name: 1, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "        -0.47293375, -0.87010264]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,16 +625,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(767, 8)"
+       "(767L, 8L)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "4 -0.274086  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +786,7 @@
        "8"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -805,31 +805,31 @@
      "output_type": "stream",
      "text": [
       "4\n",
-      "1\n",
-      "2\n",
-      "[[4, 1, 2]]\n",
-      "[5, 1, 2]\n",
+      "3\n",
+      "6\n",
+      "[[4, 3, 6]]\n",
+      "[5, 4, 8]\n",
       "5\n",
-      "1\n",
-      "2\n",
-      "[[4, 1, 2], [5, 1, 2]]\n",
-      "[4, 0, 1]\n",
       "4\n",
-      "0\n",
-      "1\n",
-      "[[4, 1, 2], [5, 1, 2], [4, 0, 1]]\n",
-      "[5, 0, 1]\n",
-      "5\n",
-      "0\n",
-      "1\n",
-      "[[4, 1, 2], [5, 1, 2], [4, 0, 1], [5, 0, 1]]\n",
-      "[5, 0, 1]\n",
-      "5\n",
-      "0\n",
-      "1\n",
-      "[[4, 1, 2], [5, 1, 2], [4, 0, 1], [5, 0, 1]]\n",
-      "[4, 0, 0]\n",
-      "[[4, 1, 2], [5, 1, 2], [4, 0, 1], [5, 0, 1], [4, 0, 0]]\n"
+      "8\n",
+      "[[4, 3, 6], [5, 4, 8]]\n",
+      "[6, 4, 9]\n",
+      "6\n",
+      "4\n",
+      "9\n",
+      "[[4, 3, 6], [5, 4, 8], [6, 4, 9]]\n",
+      "[6, 4, 9]\n",
+      "6\n",
+      "4\n",
+      "9\n",
+      "[[4, 3, 6], [5, 4, 8], [6, 4, 9]]\n",
+      "[9, 6, 14]\n",
+      "9\n",
+      "6\n",
+      "14\n",
+      "[[4, 3, 6], [5, 4, 8], [6, 4, 9], [9, 6, 14]]\n",
+      "[12, 8, 20]\n",
+      "[[4, 3, 6], [5, 4, 8], [6, 4, 9], [9, 6, 14], [12, 8, 20]]\n"
      ]
     }
    ],
@@ -879,25 +879,53 @@
     "print(subsets)\n",
     "#This is the set of subsets without repeatation of features\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('r2 : ', 4, ' r3 : ', 4)\n",
+      "('r2 : ', 2, ' r3 : ', 4)\n",
+      "('r2 : ', 4, ' r3 : ', 5)\n",
+      "('r2 : ', 5, ' r3 : ', 2)\n",
+      "('r2 : ', 4, ' r3 : ', 4)\n",
+      "('r2 : ', 3, ' r3 : ', 4)\n",
+      "('r2 : ', 3, ' r3 : ', 4)\n",
+      "('r2 : ', 2, ' r3 : ', 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = len(xScaled_df.columns)\n",
+    "for i in range(total):\n",
+    "    r2 = sum(np.random.binomial(1, 0.5, total) == 1)%total\n",
+    "    r3 = sum(np.random.binomial(1, 0.6, total) == 1)%total\n",
+    "    print (\"r2 : \",r2,\" r3 : \",r3)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
