modified SCA using KNN check the updatedSCA.ipynb

--- a/FStestRedefined.ipynb
+++ b/FStestRedefined.ipynb
@@ -853,11 +853,12 @@
     "subsets = []\n",
     "X = random.sample(range(1,len(xScaled_df.columns)),3)\n",
     "P = X\n",
+    "leastError = 100\n",
     "subsets.append(X)\n",
     "r1 = a\n",
+    "t = 0\n",
     "\n",
-    "i = 0\n",
-    "while i<Tmax:\n",
+    "while t<Tmax:\n",
     "    subset = []\n",
     "    s = int(round(random.random(),1)*10)\n",
     "    r2 = random.uniform(0.0,2.0)\n",
@@ -873,7 +874,7 @@
     "    if(isRepeat(subsets, subset) == False):\n",
     "        X = subset\n",
     "        subsets.append(subset)\n",
-    "        i += 1\n",
+    "        t += 1\n",
     "    \n",
     "print(subsets)\n",
     "#This is the set of subsets without repeatation of features\n"
