--- a/Social dataset/preprocessing.ipynb
+++ b/Social dataset/preprocessing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,218 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>school</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>address</th>\n",
-       "      <th>famsize</th>\n",
-       "      <th>Pstatus</th>\n",
-       "      <th>schoolsup</th>\n",
-       "      <th>famsup</th>\n",
-       "      <th>paid</th>\n",
-       "      <th>activities</th>\n",
-       "      <th>...</th>\n",
-       "      <th>goout</th>\n",
-       "      <th>Dalc</th>\n",
-       "      <th>Walc</th>\n",
-       "      <th>health</th>\n",
-       "      <th>absences</th>\n",
-       "      <th>failures</th>\n",
-       "      <th>G2</th>\n",
-       "      <th>G1</th>\n",
-       "      <th>G3</th>\n",
-       "      <th>result</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>fail</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>no</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>fail</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>LE3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>10</td>\n",
-       "      <td>pass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>pass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>GP</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>no</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>yes</td>\n",
-       "      <td>no</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>pass</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 48 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0 school sex address famsize Pstatus schoolsup famsup paid  \\\n",
-       "0           1     GP   F       U     GT3       A       yes     no   no   \n",
-       "1           2     GP   F       U     GT3       T        no    yes   no   \n",
-       "2           3     GP   F       U     LE3       T       yes     no  yes   \n",
-       "3           4     GP   F       U     GT3       T        no    yes  yes   \n",
-       "4           5     GP   F       U     GT3       T        no    yes  yes   \n",
-       "\n",
-       "  activities  ...   goout Dalc Walc health absences failures  G2  G1  G3  \\\n",
-       "0         no  ...       4    1    1      3        6        0   6   5   6   \n",
-       "1         no  ...       3    1    1      3        4        0   5   5   6   \n",
-       "2         no  ...       2    2    3      3       10        3   8   7  10   \n",
-       "3        yes  ...       2    1    1      5        2        0  14  15  15   \n",
-       "4         no  ...       2    1    2      5        4        0  10   6  10   \n",
-       "\n",
-       "  result  \n",
-       "0   fail  \n",
-       "1   fail  \n",
-       "2   pass  \n",
-       "3   pass  \n",
-       "4   pass  \n",
-       "\n",
-       "[5 rows x 48 columns]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,218 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>school</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>address</th>\n",
-       "      <th>famsize</th>\n",
-       "      <th>Pstatus</th>\n",
-       "      <th>schoolsup</th>\n",
-       "      <th>famsup</th>\n",
-       "      <th>paid</th>\n",
-       "      <th>activities</th>\n",
-       "      <th>...</th>\n",
-       "      <th>goout</th>\n",
-       "      <th>Dalc</th>\n",
-       "      <th>Walc</th>\n",
-       "      <th>health</th>\n",
-       "      <th>absences</th>\n",
-       "      <th>failures</th>\n",
-       "      <th>G2</th>\n",
-       "      <th>G1</th>\n",
-       "      <th>G3</th>\n",
-       "      <th>result</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>A</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>fail</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>None</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>fail</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>None</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>LE3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>10</td>\n",
-       "      <td>pass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>None</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>pass</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>None</td>\n",
-       "      <td>F</td>\n",
-       "      <td>U</td>\n",
-       "      <td>GT3</td>\n",
-       "      <td>T</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>6</td>\n",
-       "      <td>10</td>\n",
-       "      <td>pass</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 48 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0 school sex address famsize Pstatus  schoolsup  famsup  paid  \\\n",
-       "0           1   None   F       U     GT3       A          1       0     0   \n",
-       "1           2   None   F       U     GT3       T          0       1     0   \n",
-       "2           3   None   F       U     LE3       T          1       0     1   \n",
-       "3           4   None   F       U     GT3       T          0       1     1   \n",
-       "4           5   None   F       U     GT3       T          0       1     1   \n",
-       "\n",
-       "   activities   ...    goout  Dalc  Walc  health  absences  failures  G2  G1  \\\n",
-       "0           0   ...        4     1     1       3         6         0   6   5   \n",
-       "1           0   ...        3     1     1       3         4         0   5   5   \n",
-       "2           0   ...        2     2     3       3        10         3   8   7   \n",
-       "3           1   ...        2     1     1       5         2         0  14  15   \n",
-       "4           0   ...        2     1     2       5         4         0  10   6   \n",
-       "\n",
-       "   G3  result  \n",
-       "0   6    fail  \n",
-       "1   6    fail  \n",
-       "2  10    pass  \n",
-       "3  15    pass  \n",
-       "4  10    pass  \n",
-       "\n",
-       "[5 rows x 48 columns]"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,8 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -793,13 +373,22 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('preprocessedData.csv', sep=',')"
    ]
   }
  ],
